--- a/index.html
+++ b/index.html
@@ -131,17 +131,18 @@
 			</div>
 		</section>
 		<section id="mass">
-			<div class="container">
 				<div class="row">
 					<div class="col-6 col-sm-12 col-mm-12">
 						<div class="mark-5">
+							<i class="fa fa-play" aria-hidden="true"></i>
 							<img src="Images/2p.jpg">
 						</div>
 					</div>
 					<div class="col-6">
 						<div class="row1">
 								<div class="bg-clr-1">
-									<h1>Eum ipsam laborum deleniti<b> velit pariatur architecto</b></h1>
+									<h1><i>Eum ipsam laborum deleniti </i>
+									<strong> velit pariatur architecto</strong></h1>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
 								</div>
 								<div class="bg-clr">
@@ -161,7 +162,56 @@
 					</div>
 				</div>
 			</div>
+		</section>	
+		<section id="insert">
+			<div class="container">
+					<h3>SERVICE</h3>
+					<h1>CHECK OUR SERVICE</h1>
+				<div class="row">
+					<div class="col-4 col-sm-12 col-mm-6">
+						<div class="mark-7">
+							<i class="fa fa-futbol-o" aria-hidden="true"></i>
+							<h4>Lorem Ipsum</h4>
+							<p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+						</div>
+					</div>
+					<div class="col-4 col-sm-12 col-mm-6">
+						<div class="mark-7">
+							<i class="fa fa-file-text" aria-hidden="true"></i>
+							<h4>Sed ut perspiciatis</h4>
+							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+						</div>
+					</div>
+					<div class="col-4 col-sm-12 col-mm-6">
+						<div class="mark-7">
+							<i class="fa fa-clock-o" aria-hidden="true"></i>
+							<h4>Magni Dolores</h4>
+							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+						</div>
+					</div>
+					<div class="col-4 col-sm-12 col-mm-6">
+						<div class="mark-7">
+							<i class="fa fa-globe" aria-hidden="true"></i>
+							<h4>Nemo Enim</h4>
+							<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+						</div>
+					</div>
+					<div class="col-4 col-sm-12 col-mm-6">
+						<div class="mark-7">
+							<i class="fa fa-television" aria-hidden="true"></i>
+							<h4>Dele cardo</h4>
+							<p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+						</div>
+					</div>
+					<div class="col-4 col-sm-12 col-mm-6">
+						<div class="mark-7">
+							<i class="fa fa-university" aria-hidden="true"></i>
+							<h4>Divera don</h4>
+							<p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
-			
 </body>
 </html>
